# homework-buster

./: .gitignore  README.md  api.Dockerfile  pyproject.toml
.github/workflows/: flutter-tests.yml
.run/: API.run.xml
api/: .env example  README.md  __init__.py  config.py  lambda_handler.py  main.py  requirements.txt
api/routers/: __init__.py  auth.py
app/: .env  .env.example  .flutter-plugins-dependencies  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/auth/: auth_gate.dart  cognito_config.dart  cognito_service.dart  sign_in_screen.dart  sign_up_screen.dart
app/lib/home/: home_screen.dart
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/macos/Runner/Configs/: AppInfo.xcconfig
app/test/: widget_test.dart
app/test/auth/: auth_gate_test.dart  cognito_config_test.dart  cognito_service_test.dart  sign_in_screen_test.dart  sign_up_screen_test.dart
app/test/home/: home_screen_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
infrastructure/: .terraform.lock.hcl  main.tf  outputs.tf  state.tf
infrastructure/modules/api/: README.md  locals.tf  main.tf  outputs.tf  variables.tf
infrastructure/modules/auth/: main.tf  outputs.tf  variables.tf
tests/: __init__.py  test_auth.py  test_main.py
(+1 files in other folders)
